tests/typing/errors/unbound_type_vars/datatype_decl.smt2

(set-logic ALL)

(declare-sort-parameter a)

(declare-datatypes ((poly 1))
  ((par (b) ((C (C1 a) (C2 b))))))
